Icon color change && Solved overflowed text on catalog-details-page

--- a/client/src/Components/AboutSection/AboutSection.scss
+++ b/client/src/Components/AboutSection/AboutSection.scss
@@ -47,7 +47,8 @@
         margin-top: 50px;
 
         .mark-icon{
-            color:#ff4c7c;
+            // color:#ff4c7c;
+            color:#2b833e;
             width:55px;
             height: 55px;
             margin-right: 30px;
